2015-01-13  Qiang Kou <qkou@umail.iu.edu>

	* vignettes/RcppGSL-intro.Rnw: Add section about setting default
	error in GSL per http://thread.gmane.org/gmane.comp.lang.r.rcpp/7905

2015-01-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.3

2015-01-09  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppGSL-intro.Rnw: Small update for look&feel, also
	updated regarding configure variables

2015-01-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars.in: One char correction requested by CRAN Maintainers

	* configure.ac: Updated and shortened
	* configure: Ditto

2014-05-31  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION: Version 0.2.2

	* inst/NEWS.Rd: Ditto

2014-05-30  Kevin Ushey  <kevinushey@gmail.com>

	* inst/include/RcppGSLForward.h: Take address of private member, not
	variable passed in

2014-05-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.1

	* inst/unitTests/runit.client.package.R: Add 'require(Rcpp)' which is
	now needed as we only Import: rather than Depends: in the example

2014-05-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/RcppGSLExample/DESCRIPTION: Updated
	* inst/examples/RcppGSLExample/NAMESPACE: Ditto
	* inst/examples/RcppGSLExample/configure.ac: Ditto
	* inst/examples/RcppGSLExample/configure: Ditto
	* inst/examples/RcppGSLExample/src/Makevars.in: Ditto
	* inst/examples/RcppGSLExample/src/Makevars.win: Ditto

2014-05-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Updated for Rcpp (>= 0.11.0)
	* NAMESPACE: Ditto

	* configure.ac: Simplified as we longer need -L flags for Rcpp
	* src/Makevars.in: Ditto
	* src/Makevars.win (PKG_LIBS): Removed call to Rcpp:::LdFlags()

	* R/inline.R (inlineCxxPlugin): Now call Rcpp::Rcpp.plugin.maker()

	* .Rbuildignore: Added

2013-10-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Added 'Suggests: Rcpp' to build vignette as we call
	into Rcpp to get its bibtex file

2013-10-09  Dirk Eddelbuettel  <edd@debian.org>
