@@ -1,0 +1,11 @@
+# This file was generated by Rcpp::compileAttributes
+# Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
+
+gslSetErrorHandlerOff <- function() {
+    .Call('RcppGSL_gslSetErrorHandlerOff', PACKAGE = 'RcppGSL')
+}
+
+gslResetErrorHandler <- function() {
+    .Call('RcppGSL_gslResetErrorHandler', PACKAGE = 'RcppGSL')
+}
+
