@@ -1,0 +1,36 @@
+// This file was generated by Rcpp::compileAttributes
+// Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
+
+#include "../inst/include/RcppGSL.h"
+#include <Rcpp.h>
+
+using namespace Rcpp;
+
+// gslSetErrorHandlerOff
+bool gslSetErrorHandlerOff();
+RcppExport SEXP RcppGSL_gslSetErrorHandlerOff() {
+BEGIN_RCPP
+    SEXP __sexp_result;
+    {
+        Rcpp::RNGScope __rngScope;
+        bool __result = gslSetErrorHandlerOff();
+        PROTECT(__sexp_result = Rcpp::wrap(__result));
+    }
+    UNPROTECT(1);
+    return __sexp_result;
+END_RCPP
+}
+// gslResetErrorHandler
+bool gslResetErrorHandler();
+RcppExport SEXP RcppGSL_gslResetErrorHandler() {
+BEGIN_RCPP
+    SEXP __sexp_result;
+    {
+        Rcpp::RNGScope __rngScope;
+        bool __result = gslResetErrorHandler();
+        PROTECT(__sexp_result = Rcpp::wrap(__result));
+    }
+    UNPROTECT(1);
+    return __sexp_result;
+END_RCPP
+}
